--- a/publication_app/templates/team_page.html
+++ b/publication_app/templates/team_page.html
@@ -2,12 +2,18 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
+    <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
 </head>
-<body>
+<body bgcolor="#696969" background="/media/bg.jpg" style="background-attachment: fixed">
+<form action="/">
+        <p><button>Главная</button></p>
+    </form>
+<h1 style="text-align: center; color: antiquewhite">Команда гениев</h1>
     {% for tm in team %}
-        <h3>{{ tm.name }}</h3>
-        {% if tm.image %}<div><img src="{{ tm.image.url }}" alt="" width="300px" height="300px"></div>{% endif %}
-        <div>{{ tm.role }}</div>
+        <h3 style="text-align: center; color: aliceblue">{{ tm.name }}</h3>
+        <div style="text-align: center; color: antiquewhite">{{ tm.role }}</div>
+        {% if tm.image %}<div style="text-align: center"><img src="{{ tm.image.url }}" alt="" width="300px" height="300px"></div>{% endif %}
+
     {% endfor %}
 </body>
 </html>
