--- a/publication_app/templates/main_page.html
+++ b/publication_app/templates/main_page.html
@@ -11,5 +11,8 @@
     <form action="team/">
         <p><button>Команда гениев</button></p>
     </form>
+    <form action="admin/">
+        <p><button>Личный кабинет</button></p>
+    </form>
 </body>
 </html>
