--- a/publication_app/templates/music_page.html
+++ b/publication_app/templates/music_page.html
@@ -6,7 +6,7 @@
 </head>
 <body bgcolor="#696969" background="/media/bg.jpg" style="background-attachment: fixed">
 <form action="/">
-        <p><button>Главная</button></p>
+        <p><button style="border-radius: 5px; background-color: rgba(28,28,28,0); width: 400px; height: 50px">Главная</button></p>
     </form>
     {% for post in posts %}
         <h3 style="text-align: center; color: aliceblue;">{{ post.title }}</h3>
