--- a/publication_app/templates/main_page.html
+++ b/publication_app/templates/main_page.html
@@ -6,13 +6,13 @@
 </head>
 <body bgcolor="#696969" background="/media/bg.jpg" style="background-attachment: fixed">
     <form action="radio/">
-        <p><button>Местное радио</button></p>
+        <p><button style="border-radius: 5px; background-color: rgba(28,28,28,0); width: 400px; height: 50px">Местное радио</button></p>
     </form>
     <form action="team/">
-        <p><button>Команда гениев</button></p>
+        <p><button style="border-radius: 5px; background-color: rgba(28,28,28,0); width: 400px; height: 50px">Команда гениев</button></p>
     </form>
     <form action="admin/">
-        <p><button>Личный кабинет</button></p>
+        <p><button style="border-radius: 5px; background-color: rgba(28,28,28,0); width: 400px; height: 50px">Личный кабинет</button></p>
     </form>
 </body>
 </html>
