--- a/publication_app/templates/music_page.html
+++ b/publication_app/templates/music_page.html
@@ -3,15 +3,109 @@
     <meta charset="UTF-8">
     <title>{{ title }}</title>
     <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
+    <style>
+        .navbar {
+            overflow: hidden;
+            background-color: #333;
+            font-family: Arial, Helvetica, sans-serif;
+            position: fixed;
+            top: 0;
+            width: 100%;
+        }
+
+        .navbar a {
+            float: left;
+            font-size: 16px;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        .navbar a:hover, .dropdown:hover .dropbtn {
+            background-color: red;
+        }
+        .dropbtn {
+            background-color: rgba(28,28,28,0);
+            color: black;
+            padding: 16px;
+            font-size: 16px;
+            border: none;
+        }
+        .dropdown {
+            float: left;
+            overflow: hidden;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: rgba(28,28,28,0);
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+
+        .dropdown-content a {
+            float: none;
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+        }
+        .dropdown .dropbtn {
+            font-size: 16px;
+            border: none;
+            outline: none;
+            color: white;
+            padding: 14px 16px;
+            background-color: inherit;
+            font-family: inherit;
+            margin: 0;
+        }
+
+        .dropdown-content a:hover {background-color: dimgray;}
+
+        .dropdown:hover .dropdown-content {display: block;}
+    </style>
 </head>
 <body bgcolor="#696969" background="/media/bg.jpg" style="background-attachment: fixed">
-<form action="/">
-        <p><button style="border-radius: 5px; background-color: rgba(28,28,28,0); width: 400px; height: 50px">Главная</button></p>
-    </form>
+<div style="text-align: center">
     {% for post in posts %}
+<div style="display: inline-block; margin-top: 30px; padding: 30px">
         <h3 style="text-align: center; color: aliceblue;">{{ post.title }}</h3>
         {% if post.image %}<div><img src="{{ post.image.url }}" alt="" width="500px" height="500px" style="display: block; margin: 0 auto"></div>{% endif %}
         <div style="text-align: center; color: aliceblue">{{ post.text }}</div>
-    {% endfor %}
+
+</div>
+        {% endfor %}
+</div>
+<div style="margin-bottom: 30px; text-align: center">
+    <div style="display: inline-block; padding-right: 130px; padding-left: 130px">
+    <audio controls>
+    <source src="/media/living-life.mp3">
+</audio>
+</div>
+<div style="padding-right: 130px; display: inline-block; padding-left: 130px">
+    <audio controls>
+    <source src="/media/vecnyi-dvigatel.mp3">
+</audio>
+</div>
+<div style="padding-right: 130px; display: inline-block; padding-left: 130px">
+    <audio controls>
+    <source src="/media/Joji-Ew.mp3">
+   </audio>
+</div>
+</div>
+
+<div class="navbar">
+    <a href="/">Главная</a>
+    <div class="dropdown">
+        <button class="dropbtn">Балдежное меню<i class="fa fa-caret-down"></i></button>
+        <div class="dropdown-content">
+
+        </div>
+    </div>
+</div>
 </body>
 </html>
