--- a/publication_app/templates/team_page.html
+++ b/publication_app/templates/team_page.html
@@ -3,17 +3,101 @@
     <meta charset="UTF-8">
     <title>{{ title }}</title>
     <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
+    <style>
+        .navbar {
+            overflow: hidden;
+            background-color: #333;
+            font-family: Arial, Helvetica, sans-serif;
+            position: fixed;
+            top: 0;
+            width: 100%;
+        }
+
+        .navbar a {
+            float: left;
+            font-size: 16px;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        .navbar a:hover, .dropdown:hover .dropbtn {
+            background-color: red;
+        }
+
+        .dropdown {
+            float: left;
+            overflow: hidden;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: rgba(28,28,28,0);
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+
+        .dropdown-content a {
+            float: none;
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+        }
+        .dropdown .dropbtn {
+            font-size: 16px;
+            border: none;
+            outline: none;
+            color: white;
+            padding: 14px 16px;
+            background-color: inherit;
+            font-family: inherit;
+            margin: 0;
+        }
+
+        .dropdown-content a:hover {background-color: dimgray;}
+
+        .dropdown:hover .dropdown-content {display: block;}
+        .layer2 {
+            z-index: 2;
+        }
+        .rectangle {
+            z-index: 1;
+        }
+    </style>
 </head>
 <body bgcolor="#696969" background="/media/bg.jpg" style="background-attachment: fixed">
-<form action="/">
-        <p><button style="border-radius: 5px; background-color: rgba(28,28,28,0); width: 400px; height: 50px">Главная</button></p>
-    </form>
-<h1 style="text-align: center; color: antiquewhite">Команда гениев</h1>
-    {% for tm in team %}
-        <h3 style="text-align: center; color: aliceblue">{{ tm.name }}</h3>
-        <div style="text-align: center; color: antiquewhite">{{ tm.role }}</div>
-        {% if tm.image %}<div style="text-align: center"><img src="{{ tm.image.url }}" alt="" width="300px" height="300px"></div>{% endif %}
+<div class="rectangle" style="width: 100%; height: 20%; background-color: white; opacity: 0.7">
+    </div>
+<div class="layer2" style="text-align: center">
+    <h1 style="color: #faebd7">Команда гениев</h1>
+        {% for tm in team %}
+<div style="display: inline-block; padding: 30px">
+            {% if tm.image %}
+                <div style="text-align: center">
+                <img src="{{ tm.image.url }}" alt="" width="300px" height="300px" style="border-radius: 150px">
+                </div>
+            {% endif %}
+                    <h3 style=" color: aliceblue; text-align: center">{{ tm.name }}</h3>
+                    <div style="color: antiquewhite; text-align: center">{{ tm.role }}
+                    </div>
+</div>
+        {% endfor %}
+</div>
 
-    {% endfor %}
+<div class="navbar">
+    <a href="/">Главная</a>
+    <div class="dropdown">
+        <button class="dropbtn">Балдежное меню</button>
+        <div class="dropdown-content">
+            <a href="/"><li>Главная</li></a>
+            <a href="radio/"><li>Местное радио</li></a>
+            <a href="team/"><li>Команда гениев</li></a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
