--- a/publication_app/templates/login_page.html
+++ b/publication_app/templates/login_page.html
@@ -73,6 +73,18 @@
 </head>
 <body bgcolor="#696969" background="/media/bg.jpg" style="background-attachment: fixed">
     <div class="navbar">
+        <a href="admin/">
+            Админка
+        </a>
+        <a href="registration">
+            Балдежная регистрация
+        </a>
+        <a href="radio">
+            Местное радио
+        </a>
+        <a href="team">
+            Команда гениев
+        </a>
         <div class="dropdown">
             <button class="dropbtn">
                 Балдежное меню
@@ -89,22 +101,22 @@
                 </a>
             </div>
         </div>
-        <a href="registration">
-            Балдежная регистрация
-        </a>
-        {% if user.is_authenticated %}
-        <a href="logout/">
-            Logout
-        </a>
-        {% else %}
-        <a href="login/">
-            Login
-        </a>
-        {% endif %}
     </div>
-<h1 style="text-align: center; color: antiquewhite">Привет</h1>
 
-    <p style="text-align: center; color: antiquewhite"> Это балдежный сайт специально для тмс22</p>
+{% block content %}
 
+
+<!--Login-->
+<div class="container py-5">
+  <h1>Login</h1>
+  <form method="POST" action="/">
+    {% csrf_token %}
+    {{ login_form }}
+    <button class="btn btn-primary" type="submit">Login</button>
+  </form>
+  <p class="text-center">Don't have an account? <a href="registration/">Create an account</a>.</p>
+</div>
+
+{% endblock %}
 </body>
 </html>
