--- a/publication_app/templates/music_page.html
+++ b/publication_app/templates/music_page.html
@@ -1,14 +1,15 @@
 <html lang="en" >
 <head>
     <meta charset="UTF-8">
-    <title>{{ title }}</title>
+    <title>
+        {{ title }}
+    </title>
     <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
     <style>
         .navbar {
             overflow: hidden;
             background-color: #333;
             font-family: Arial, Helvetica, sans-serif;
-            position: fixed;
             top: 0;
             width: 100%;
         }
@@ -70,42 +71,57 @@
     </style>
 </head>
 <body bgcolor="#696969" background="/media/bg.jpg" style="background-attachment: fixed">
-<div style="text-align: center">
-    {% for post in posts %}
-<div style="display: inline-block; margin-top: 30px; padding: 30px">
-        <h3 style="text-align: center; color: aliceblue;">{{ post.title }}</h3>
-        {% if post.image %}<div><img src="{{ post.image.url }}" alt="" width="500px" height="500px" style="display: block; margin: 0 auto"></div>{% endif %}
-        <div style="text-align: center; color: aliceblue">{{ post.text }}</div>
-
-</div>
-        {% endfor %}
-</div>
-<div style="margin-bottom: 30px; text-align: center">
-    <div style="display: inline-block; padding-right: 130px; padding-left: 130px">
-    <audio controls>
-    <source src="/media/living-life.mp3">
-</audio>
-</div>
-<div style="padding-right: 130px; display: inline-block; padding-left: 130px">
-    <audio controls>
-    <source src="/media/vecnyi-dvigatel.mp3">
-</audio>
-</div>
-<div style="padding-right: 130px; display: inline-block; padding-left: 130px">
-    <audio controls>
-    <source src="/media/Joji-Ew.mp3">
-   </audio>
-</div>
-</div>
-
-<div class="navbar">
-    <a href="/">Главная</a>
-    <div class="dropdown">
-        <button class="dropbtn">Балдежное меню<i class="fa fa-caret-down"></i></button>
-        <div class="dropdown-content">
-
+    <div class="navbar">
+        <a href="/">Главная</a>
+        <div class="dropdown">
+            <button class="dropbtn">Балдежное меню
+            </button>
+            <div class="dropdown-content">
+                <a href="/">
+                    Главная
+                </a>
+                <a href="/radio">
+                    Местное радио
+                </a>
+                <a href="/team">
+                    Команда гениев
+                </a>
+            </div>
         </div>
     </div>
-</div>
+    <div style="text-align: center">
+        {% for post in posts %}
+        <div style="display: inline-block; margin-top: 30px; padding: 30px">
+            <h3 style="text-align: center; color: aliceblue;">
+                {{ post.title }}
+            </h3>
+                {% if post.image %}
+                <div>
+                    <img src="{{ post.image.url }}" alt="" width="500px" height="500px" style="display: block; margin: 0 auto">
+                </div>
+                {% endif %}
+            <div style="text-align: center; color: aliceblue">
+                {{ post.text }}
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    <div style="margin-bottom: 30px; text-align: center">
+        <div style="display: inline-block; padding-right: 130px; padding-left: 130px">
+            <audio controls>
+                <source src="/media/living-life.mp3">
+            </audio>
+        </div>
+        <div style="padding-right: 130px; display: inline-block; padding-left: 130px">
+            <audio controls>
+                <source src="/media/vecnyi-dvigatel.mp3">
+            </audio>
+        </div>
+        <div style="padding-right: 130px; display: inline-block; padding-left: 130px">
+            <audio controls>
+                <source src="/media/Joji-Ew.mp3">
+            </audio>
+        </div>
+    </div>
 </body>
 </html>
