--- a/publication_app/templates/team_page.html
+++ b/publication_app/templates/team_page.html
@@ -1,16 +1,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ title }}</title>
+    <title>
+        {{ title }}
+    </title>
     <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
     <style>
+        .layer1 {
+            z-index: 1;
+        }
+        .layer2 {
+            z-index: 2;
+        }
         .navbar {
             overflow: hidden;
             background-color: #333;
             font-family: Arial, Helvetica, sans-serif;
-            position: fixed;
+
             top: 0;
             width: 100%;
+            z-index: 1;
         }
 
         .navbar a {
@@ -27,7 +36,7 @@
 
         .dropdown {
             float: left;
-            overflow: hidden;
+            overflow: visible;
         }
 
         .dropdown-content {
@@ -58,46 +67,56 @@
             margin: 0;
         }
 
-        .dropdown-content a:hover {background-color: dimgray;}
-
-        .dropdown:hover .dropdown-content {display: block;}
-        .layer2 {
-            z-index: 2;
+        .dropdown-content a:hover {
+            background-color: dimgray;
         }
-        .rectangle {
-            z-index: 1;
+
+        .dropdown:hover .dropdown-content {
+            display: block;
         }
     </style>
 </head>
 <body bgcolor="#696969" background="/media/bg.jpg" style="background-attachment: fixed">
-<div class="rectangle" style="width: 100%; height: 20%; background-color: white; opacity: 0.7">
-    </div>
-<div class="layer2" style="text-align: center">
-    <h1 style="color: #faebd7">Команда гениев</h1>
-        {% for tm in team %}
-<div style="display: inline-block; padding: 30px">
-            {% if tm.image %}
-                <div style="text-align: center">
-                <img src="{{ tm.image.url }}" alt="" width="300px" height="300px" style="border-radius: 150px">
-                </div>
-            {% endif %}
-                    <h3 style=" color: aliceblue; text-align: center">{{ tm.name }}</h3>
-                    <div style="color: antiquewhite; text-align: center">{{ tm.role }}
-                    </div>
-</div>
-        {% endfor %}
-</div>
-
-<div class="navbar">
-    <a href="/">Главная</a>
-    <div class="dropdown">
-        <button class="dropbtn">Балдежное меню</button>
-        <div class="dropdown-content">
-            <a href="/"><li>Главная</li></a>
-            <a href="radio/"><li>Местное радио</li></a>
-            <a href="team/"><li>Команда гениев</li></a>
+    <div class="navbar">
+        <a href="/">Главная</a>
+        <div class="dropdown">
+            <button class="dropbtn">
+                Балдежное меню
+            </button>
+            <div class="dropdown-content">
+                <a href="/">
+                    Главная
+                </a>
+                <a href="/radio">
+                    Местное радио
+                </a>
+                <a href="/team">
+                    Команда гениев
+                </a>
+            </div>
         </div>
     </div>
-</div>
+    <div class=layer2 style="width: 100%; height: 20%; background-color: white; opacity: 0.7; z-index: 2">
+    </div>
+    <div class=layer1 style="text-align: center; position: relative; z-index: 1">
+        <h1 style="color: #faebd7">
+            Команда гениев
+        </h1>
+            {% for tm in team %}
+                <div style="display: inline-block; padding: 30px">
+                    {% if tm.image %}
+                        <div style="text-align: center">
+                            <img src="{{ tm.image.url }}" alt="" width="300px" height="300px" style="border-radius: 150px">
+                        </div>
+                    {% endif %}
+                    <h3 style=" color: aliceblue; text-align: center">
+                        {{ tm.name }}
+                    </h3>
+                    <div style="color: antiquewhite; text-align: center">
+                        {{ tm.role }}
+                    </div>
+                </div>
+            {% endfor %}
+    </div>
 </body>
 </html>
